--- a/dashboard/pom.xml
+++ b/dashboard/pom.xml
@@ -92,6 +92,10 @@
 			<version>5.5.5</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-config</artifactId>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
