--- a/dashboard/src/main/resources/application.properties
+++ b/dashboard/src/main/resources/application.properties
@@ -1,12 +1,3 @@
 spring.application.name=dashboard
 
-server.port=8086
-
-server.connection-timeout=100000 # Em milissegundos
-logging.level.feign=DEBUG
-logging.level.org.springframework.web=DEBUG
-spring.mvc.async.request-timeout=100s
-server.tomcat.connection-timeout=100s
-
-logging.level.org.springframework.web.context.request.async=DEBUG
-logging.level.org.springframework.web.servlet.DispatcherServlet=DEBUG
+spring.config.import=configserver:http://localhost:8099
